as